annimate_core/tests/snapshots/project__full.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: Test Corpus Set
  corpus_names:
    - Test Corpus 1
    - Test Corpus 2
  aql_query: Test AQL query
  query_language: AQLQuirksV3
  export_columns:
    - Number
    - AnnoCorpus:
        anno_key:
          - ns1
          - anno1
    - AnnoDocument:
        anno_key:
          - ns2
          - anno2
    - AnnoMatch:
        anno_key:
          - ns3
          - anno3
        node_index: 0
    - AnnoEdge:
        edge_type:
          - Dominance
          - comp1
        anno_key:
          - ns4
          - anno4
        source_node_index: 1
        target_node_index: 2
    - MatchInContext:
        segmentation: Test Segmentation
        anno_key:
          AnnoKey:
            - ns5
            - anno5
        context:
          Asymmetric:
            left: 5
            right: 10
        primary_node_indices:
          - 3
          - 4
          - 5
    - QueryNodeProperty:
        key: Fragment
        match_node_index: 6
  export_format: Xlsx
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
corpus-set = "Test Corpus Set"
corpora = [
    "Test Corpus 1",
    "Test Corpus 2",
]
query = "Test AQL query"
query-language = "aql-compatibility"
export-format = "xlsx"

[[project.columns]]
type = "number"

[[project.columns]]
type = "corpus-metadata"
annotation = { ns = "ns1", name = "anno1" }

[[project.columns]]
type = "document-metadata"
annotation = { ns = "ns2", name = "anno2" }

[[project.columns]]
type = "match-annotation"
annotation = { ns = "ns3", name = "anno3" }
node-index = 0

[[project.columns]]
type = "edge-annotation"
edge-type = { ctype = "Dominance", name = "comp1" }
annotation = { ns = "ns4", name = "anno4" }
source-node-index = 1
target-node-index = 2

[[project.columns]]
type = "match-in-context"
segmentation = "Test Segmentation"
annotation = { ns = "ns5", name = "anno5" }
context = { left = 5, right = 10 }
primary-node-indices = [3, 4, 5]

[[project.columns]]
type = "query-node-property"
property = "fragment"
node-index = 6
