annimate_core/tests/snapshots/project__with_export_columns_default.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: ~
  corpus_names: []
  aql_query: ""
  query_language: AQL
  export_columns:
    - Number
    - AnnoCorpus:
        anno_key: ~
    - AnnoDocument:
        anno_key: ~
    - AnnoMatch:
        anno_key: ~
        node_index: ~
    - AnnoEdge:
        edge_type: ~
        anno_key: ~
        source_node_index: ~
        target_node_index: ~
    - MatchInContext:
        segmentation: ~
        anno_key: ~
        context:
          Symmetric: 20
        primary_node_indices: []
    - QueryNodeProperty:
        query_node_property_key: variable
        match_node_index: ~
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
query-language = "aql"
export-format = "csv"

[[project.columns]]
type = "number"

[[project.columns]]
type = "corpus-metadata"

[[project.columns]]
type = "document-metadata"

[[project.columns]]
type = "match-annotation"

[[project.columns]]
type = "edge-annotation"

[[project.columns]]
type = "match-in-context"
context = 20

[[project.columns]]
type = "query-node-property"
property = "variable"
