annimate_core/tests/snapshots/project__with_export_columns_with_annos.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: ~
  corpus_names: []
  aql_query: ""
  query_language: AQL
  export_columns:
    - AnnoCorpus:
        anno_key:
          - ns1
          - anno1
    - AnnoDocument:
        anno_key:
          - ns2
          - anno2
    - AnnoMatch:
        anno_key:
          - ns3
          - anno3
        node_index: ~
    - AnnoEdge:
        edge_type: ~
        anno_key:
          - ns4
          - anno4
        source_node_index: ~
        target_node_index: ~
    - MatchInContext:
        segmentation: ~
        anno_key:
          AnnoKey:
            - ns5
            - anno5
        context:
          Symmetric: 20
        primary_node_indices: []
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
query-language = "aql"
export-format = "csv"

[[project.columns]]
type = "corpus-metadata"
annotation = { ns = "ns1", name = "anno1" }

[[project.columns]]
type = "document-metadata"
annotation = { ns = "ns2", name = "anno2" }

[[project.columns]]
type = "match-annotation"
annotation = { ns = "ns3", name = "anno3" }

[[project.columns]]
type = "edge-annotation"
annotation = { ns = "ns4", name = "anno4" }

[[project.columns]]
type = "match-in-context"
annotation = { ns = "ns5", name = "anno5" }
context = 20
