annimate_core/tests/snapshots/project__with_export_columns_with_node_indices.snap
---
source: annimate_core/tests/project.rs
info:
  corpus_set: ~
  corpus_names: []
  aql_query: ""
  query_language: AQL
  export_columns:
    - AnnoMatch:
        anno_key: ~
        node_index: 0
    - AnnoEdge:
        edge_type: ~
        anno_key: ~
        source_node_index: 1
        target_node_index: 2
    - MatchInContext:
        segmentation: ~
        anno_key: ~
        context:
          Symmetric: 20
        primary_node_indices:
          - 3
          - 4
          - 5
    - QueryNodeProperty:
        key: Variable
        match_node_index: 6
  export_format: Csv
---
# Annimate project file
# https://github.com/matthias-stemmler/annimate

format-version = 2

[project]
query-language = "aql"
export-format = "csv"

[[project.columns]]
type = "match-annotation"
node-index = 0

[[project.columns]]
type = "edge-annotation"
source-node-index = 1
target-node-index = 2

[[project.columns]]
type = "match-in-context"
context = 20
primary-node-indices = [3, 4, 5]

[[project.columns]]
type = "query-node-property"
property = "variable"
node-index = 6
